--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
@@ -18,7 +18,7 @@
         xmlns:p="http://primefaces.org/ui">
     <!-- edit dialog -->
     <p:dialog widgetVar="editTemplateDialog"
-              header="#{empty ProzessverwaltungForm.templateProperty.title ? msgs.addTemplateProperty : msgs.eigenschaftBearbeiten}"
+              header="#{empty ProzessverwaltungForm.templateProperty.title ? msgs.addTemplateProperty : msgs.propertyEdit}"
               width="700px"
               modal="true"
               dynamic="true"
