--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
@@ -19,7 +19,7 @@
         xmlns:p="http://primefaces.org/ui">
     <!-- edit dialog -->
     <p:dialog widgetVar="editWorkpieceDialog"
-              header="#{empty ProzessverwaltungForm.workpieceProperty.title ? msgs.addWorkpieceProperty : msgs.eigenschaftBearbeiten}"
+              header="#{empty ProzessverwaltungForm.workpieceProperty.title ? msgs.addWorkpieceProperty : msgs.propertyEdit}"
               width="700px"
               modal="true"
               dynamic="true"
