--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml
@@ -49,7 +49,7 @@
                 </p:selectOneMenu>
             </div>
             <div>
-                <p:outputLabel for="fieldSelect" value="#{msgs.feld}"/>
+                <p:outputLabel for="fieldSelect" value="#{msgs.field}"/>
                 <p:selectOneMenu id="fieldSelect" value="#{ProzesskopieForm.opacSuchfeld}">
                     <f:selectItem itemLabel="Identifier" itemValue="12"/>
                     <f:selectItem itemLabel="Barcode" itemValue="8535"/>
