--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -33,7 +33,7 @@
                     <table cellpadding="3" cellspacing="0" width="100%" class="eingabeBoxen">
                         <tr>
                             <td colspan="2" class="eingabeBoxen_row1">
-                                <h:outputText value="#{msgs.auswahl}"/>
+                                <h:outputText value="#{msgs.actions}"/>
                             </td>
                         </tr>
                         <tr>
@@ -107,7 +107,7 @@
                                     <h:commandLink action="#{BatchForm.editProperties}">
                                         <h:graphicImage alt="edit batch properties" value="/pages/images/buttons/edit.gif"
                                                         style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.eigenschaftBearbeiten}"/>
+                                        <h:outputText value="#{msgs.propertyEdit}"/>
                                     </h:commandLink>
 
                                     <h:commandLink action="#{BatchForm.deleteBatch}"
@@ -124,7 +124,7 @@
                             <td width="50%" class="eingabeBoxen_row2"
                                 style="padding-left: 20px;vertical-align:top;">
                                 <h4>
-                                    <h:outputText value="#{msgs.prozesse}"/>
+                                    <h:outputText value="#{msgs.processes}"/>
                                 </h4>
 
                                 <h:panelGroup style="margin-bottom:10px;display:block;">
