--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
@@ -34,7 +34,7 @@
                     <p:column headerText="#{msgs.userGroup}">
                         <h:outputText value="#{usergroup.title}"/>
                     </p:column>
-                    <p:column headerText="#{msgs.auswahl}">
+                    <p:column headerText="#{msgs.actions}">
                         <p:commandLink id="addUsergroup"
                                        action="#{ProzessverwaltungForm.addUserGroup}"
                                        oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"
