--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxDetails.xhtml
@@ -19,10 +19,10 @@
         <p:column headerText="#{msgs.titel}">
             <h:outputText value="#{AktuelleSchritteForm.mySchritt.localizedTitle}"/>
         </p:column>
-        <p:column headerText="#{msgs.prozessTitel}">
+        <p:column headerText="#{msgs.processTitle}">
             <h:outputText value="#{item.process.title}"/>
         </p:column>
-        <p:column headerText="#{msgs.reihenfolge}">
+        <p:column headerText="#{msgs.order}">
             <h:outputText value="#{item.ordering}"/>
         </p:column>
         <p:column headerText="#{msgs.prioritaet}">
