--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
@@ -43,9 +43,8 @@
                 </div>
                 <div>
                     <p:commandButton id="absenden"
-                                     value="#{msgs.speichern}"
+                                     value="#{msgs.save}"
                                      action="#{LoginForm.saveChangedPassword}"
-
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
                                      validateClient="true"
