--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
@@ -60,7 +60,7 @@
                 </div>
             </p:row>
             <p:commandButton id="submit"
-                             value="#{msgs.speichern}"
+                             value="#{msgs.save}"
                              action="#{LoginForm.saveUserConfiguration}"
                              update="sticky-notifications"
                              icon="fa fa-floppy-o fa-lg"
