--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
@@ -35,7 +35,7 @@
                         <p:column headerText="#{msgs.userGroup}">
                             <h:outputText value="#{item.title}"/>
                         </p:column>
-                        <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
+                        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
                             <p:commandLink id="addUserGroup"
                                            action="#{BenutzerverwaltungForm.addToGroup}"
                                            title="add to user group"
