--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
@@ -35,7 +35,7 @@
                         <p:column headerText="#{msgs.projectList}">
                             <h:outputText value="#{item.title}"/>
                         </p:column>
-                        <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
+                        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
                             <p:commandLink id="addUserProject"
                                            action="#{BenutzerverwaltungForm.addToProject}"
                                            title="add to project"
