--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -33,7 +33,7 @@
         <p:column headerText="gidNumber">
             <h:outputText value="#{item.gidNumber}"/>
         </p:column>
-        <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
+        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:link outcome="ldapgroupEdit">
                 <f:param name="id" value="#{item.id}" />
                 <i class="fa fa-pencil-square-o fa-lg"/>
