--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -89,14 +89,14 @@
 
                             <h:panelGroup
                                 rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllProcesses')}">
-                                <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" id="linkProcesses"
+                                <li class="nav-pic-text"><h:link value="#{msgs.processes}" id="linkProcesses"
                                                                  outcome="processes"><i
                                     class="fa fa-hourglass-3 fa-lg"/></h:link></li>
                             </h:panelGroup>
 
                             <h:panelGroup
                                 rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllProjects, viewAllDockets')}">
-                                <li class="nav-pic-text"><h:link value="#{msgs.projekte}" id="linkProjects"
+                                <li class="nav-pic-text"><h:link value="#{msgs.projects}" id="linkProjects"
                                                                  outcome="projects"><i
                                     class="fa fa-folder-open fa-lg"/></h:link></li>
                             </h:panelGroup>
