--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -19,14 +19,14 @@
     <p:dataTable var="item"
                  id="propertyTable"
                  value="#{ProzessverwaltungForm.properties}">
-        <p:column headerText="#{msgs.eigenschaft}">
+        <p:column headerText="#{msgs.property}">
             <h:outputText value="#{item.title}"/>
         </p:column>
         <p:column headerText="#{msgs.value}">
             <h:outputText value="#{item.value}" rendered="#{item.type.name ne 'link'}"/>
             <h:outputLink title="#{item.value}" value="#{item.value}" rendered="#{item.type.name eq 'link'}"/>
         </p:column>
-        <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
+        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <p:commandLink id="editProperty" title="#{msgs.bearbeiten}"
                            oncomplete="PF('editPropertyDialog').show()"
                            update="@(.editDialog)">
@@ -39,7 +39,7 @@
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
             </p:commandLink>
             <p:commandLink id="deleteProperty"
-                           title="#{msgs.loeschen}"
+                           title="#{msgs.delete}"
                            oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                            action="#{ProzessverwaltungForm.deleteProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
@@ -51,7 +51,7 @@
                      id="createNewProperty"
                      oncomplete="PF('editPropertyDialog').show()"
                      update="@(.editDialog)"
-                     value="#{msgs.eigenschaftHinzufuegen}"
+                     value="#{msgs.propertyAdd}"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
                      styleClass="button-filled-green">
