--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -19,13 +19,13 @@
     <p:dataTable id="templatePropertyTable"
                  var="property"
                  value="#{ProzessverwaltungForm.templates}">
-        <p:column headerText="#{msgs.eigenschaft}">
+        <p:column headerText="#{msgs.property}">
             <h:outputText value="#{property.title}"/>
         </p:column>
         <p:column headerText="#{msgs.value}">
             <h:outputText value="#{property.value}"/>
         </p:column>
-        <p:column headerText="#{msgs.auswahl}"
+        <p:column headerText="#{msgs.actions}"
                   styleClass="actionsColumn">
             <p:commandLink id="editTemplateProperty"
                            title="#{msgs.bearbeiten}"
@@ -35,7 +35,7 @@
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
             </p:commandLink>
             <p:commandLink id="deleteTemplateProperty"
-                           title="#{msgs.loeschen}"
+                           title="#{msgs.delete}"
                            oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                            action="#{ProzessverwaltungForm.deleteTemplateProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
