--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
@@ -28,7 +28,7 @@
             <h:outputText value="#{item.title}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.datei}">
+        <p:column headerText="#{msgs.file}">
             <h:outputText value="#{item.file}"/>
         </p:column>
 
@@ -41,7 +41,7 @@
             </ui:fragment>
         </p:column>
 
-        <p:column headerText="#{msgs.auswahl}"
+        <p:column headerText="#{msgs.actions}"
                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editRuleset')}"
                   styleClass="actionsColumn">
             <h:link outcome="rulesetEdit"
