--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxActivities.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxActivities.xhtml
@@ -81,21 +81,21 @@
                                 <h:panelGroup
                                         style="color: red;margin-top:5px;margin-bottom:15px;display:block"
                                         rendered="#{AktuelleSchritteForm.mySchritt.process.blockedUser != null}">
-                                    <h:outputText value="#{msgs.gesperrt}"/>
+                                    <h:outputText value="#{msgs.blocked}"/>
                                     <br/>
                                     <h:panelGrid columns="2" style="color: red;margin-left:30px"
                                                  cellpadding="3">
-                                        <h:outputText value="#{msgs.benutzer}: "/>
+                                        <h:outputText value="#{msgs.user}: "/>
                                         <h:outputText
                                                 value="#{AktuelleSchritteForm.mySchritt.process.blockedUser.fullName}"/>
-                                        <h:outputText value="#{msgs.standort}: "/>
+                                        <h:outputText value="#{msgs.location}: "/>
                                         <h:outputText
                                                 value="#{AktuelleSchritteForm.mySchritt.process.blockedUser.location}"/>
                                         <h:outputText value="#{msgs.lebenszeichen} "/>
                                         <h:outputText
                                                 value="#{AktuelleSchritteForm.mySchritt.process.blockedMinutes} min #{AktuelleSchritteForm.mySchritt.process.blockedSeconds} sec"/>
                                     </h:panelGrid>
-                                    <h:outputText value="#{msgs.spaeter}"/>
+                                    <h:outputText value="#{msgs.later}"/>
 
                                     <!-- If blocked by yourself: you can unblocked -->
                                     <h:commandLink id="action1"
