--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
@@ -50,7 +50,7 @@
 
         <!-- actions -->
         <p:column rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('editTask, deleteTask')}"
-                  headerText="#{msgs.auswahl}" id="taskAction" styleClass="actionsColumn">
+                  headerText="#{msgs.actions}" id="taskAction" styleClass="actionsColumn">
             <h:link outcome="taskEdit" id="editTask"
                     rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editTask',item.template.project.client.id,item.template.project.id)}"
                     title="#{msgs.detailsDesSchritts}">
@@ -59,7 +59,7 @@
             </h:link>
             <p:commandLink id="deleteTask"
                            rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('deleteTask',item.template.project.client.id,item.template.project.id)}"
-                           title="#{msgs.loeschen}"
+                           title="#{msgs.delete}"
                            action="#{TemplateForm.removeTask}"
                            immediate="true"
                            oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
@@ -76,7 +76,7 @@
 
         <p:rowExpansion>
             <div class="row-expansion-wrapper">
-                <p:panelGrid columns="2" columnClasses="label,value" headerText="#{msgs.eigenschaften}">
+                <p:panelGrid columns="2" columnClasses="label,value" headerText="#{msgs.properties}">
                     <h:outputText value="#{msgs.title}: "/>
                     <h:outputText value="#{item.template.title}"/>
 
